--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <header>
   <img src="imagenes/logo.png" alt="Birria El Sazón">
   <div>
-    <h1>Birria De Res El Sazón</h1>
+    <h1>Birria El Sazón</h1>
     <span>Auténtica Birria de Res</span>
   </div>
 </header>
@@ -32,7 +32,8 @@
 
   <!-- Formulario de login -->
   <div id="login">
-    <input type="text" id="name" placeholder="Ingresa tu nombre">
+    <input type="text" id="name" placeholder="Ingresa tu nombre"><br><br>
+    <input type="password" id="password" placeholder="Contraseña del día"><br><br>
     <button onclick="registerName()">Entrar</button>
   </div>
 
@@ -72,6 +73,12 @@
       <label>Fecha Fin:</label>
       <input type="date" id="fechaFin">
       <button onclick="showSalesByDateRange()">Buscar Venta por Rango</button>
+    </div>
+
+    <div style="margin-top:2rem;">
+      <h3>Cambiar Contraseña de Cliente</h3>
+      <input type="text" id="newClientPassword" placeholder="Nueva Contraseña">
+      <button onclick="updateClientPassword()">Actualizar Contraseña</button>
     </div>
 
     <div id="admin-results" style="margin-top:2rem;"></div>
