--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
     <h3>Cambiar Contraseña de Cliente</h3>
     <input id="newClientPassword" placeholder="Nueva Contraseña" type="text"/>
     <button class="button-primary" onclick="updateClientPassword()">Actualizar Contraseña</button>
+    
+    <button class="button-primary" onclick="showExpensesPanel()">Registrar Gastos</button>
+    
     <div id="admin-results"></div>
     <button class="button-exit" onclick="exitSite()">Salir</button>
   </div>
