--- a/gastos.html
+++ b/gastos.html
@@ -3,11 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Registro de Gastos y Ganancias</title>
-
-  <!-- ✅ Adaptación para dispositivos móviles -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- ✅ Estilos integrados -->
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -15,7 +11,6 @@
       margin: 0;
       background-color: #f9f9f9;
     }
-
     .section {
       background: #fff;
       padding: 16px;
@@ -24,25 +19,20 @@
       max-width: 600px;
       margin: auto;
     }
-
     h2, h3, h4 {
       color: #333;
     }
-
     .gasto-linea {
       display: flex;
       gap: 8px;
       margin-bottom: 10px;
     }
-
     .gasto-linea input[type="text"] {
       flex: 2;
     }
-
     .gasto-linea input[type="number"] {
       flex: 1;
     }
-
     input[type="date"],
     input[type="number"],
     input[type="text"] {
@@ -52,7 +42,6 @@
       border: 1px solid #ccc;
       border-radius: 5px;
     }
-
     .button-primary {
       background-color: #007bff;
       color: white;
@@ -64,11 +53,9 @@
       width: 100%;
       margin-bottom: 12px;
     }
-
     .button-primary:hover {
       background-color: #0056b3;
     }
-
     .button-exit {
       background-color: #6c757d;
       color: white;
@@ -79,12 +66,10 @@
       cursor: pointer;
       width: 100%;
     }
-
     ul {
       padding-left: 20px;
       margin-top: 0;
     }
-
     @media (max-width: 600px) {
       h2, h3, h4 {
         font-size: 1.1em;
@@ -96,6 +81,7 @@
   <div class="section">
     <h2>Registrar Gastos</h2>
     <div id="expense-fields"></div>
+    <button onclick="addExpenseRow()" class="button-primary" style="background-color:#28a745;">Agregar Concepto</button>
     <button onclick="saveExpenses()" class="button-primary">Guardar Gastos</button>
 
     <h3>Rango de Fechas para Ventas</h3>
@@ -115,17 +101,16 @@
     <div id="admin-results" style="margin-top:20px;"></div>
     <br><button class="button-exit" onclick="window.close()">Salir</button>
   </div>
-  <!-- ✅ Firebase SDK y lógica JavaScript -->
+
+  <!-- Firebase SDK y lógica -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
   <script>
-    // 🔗 Conexión a Firebase
     const firebaseConfig = {
       databaseURL: "https://birria-c2b8a-default-rtdb.firebaseio.com/"
     };
     firebase.initializeApp(firebaseConfig);
 
-    // ✅ Productos considerados para ganancia
     const productosClave = [
       'Taco de birria',
       'Orden de 4 pzs. con consomé individual',
@@ -138,45 +123,57 @@
       'Refresco'
     ];
 
-    // ✅ Cargar gastos existentes desde Firebase
     function loadExpenses() {
       firebase.database().ref('gastos').once('value').then(snapshot => {
         const gastos = snapshot.val() || [];
         const container = document.getElementById('expense-fields');
         container.innerHTML = '';
-        for (let i = 0; i < 15; i++) {
-          const gasto = gastos[i] || { descripcion: '', costo: '' };
-          const row = document.createElement('div');
-          row.className = 'gasto-linea';
-          row.innerHTML = `
-            <input id="desc${i}" value="${gasto.descripcion}" placeholder="Descripción #${i + 1}" type="text">
-            <input id="cost${i}" value="${gasto.costo}" placeholder="Costo #${i + 1}" type="number" min="0" step="0.01">
-          `;
-          container.appendChild(row);
-        }
+        gastos.forEach((gasto, i) => {
+          if (gasto.descripcion.trim() !== '') {
+            const row = document.createElement('div');
+            row.className = 'gasto-linea';
+            row.innerHTML = `
+              <input id="desc${i}" value="${gasto.descripcion}" placeholder="Descripción #${i + 1}" type="text">
+              <input id="cost${i}" value="${gasto.costo}" placeholder="Costo #${i + 1}" type="number" min="0" step="0.01">
+            `;
+            container.appendChild(row);
+          }
+        });
       });
     }
 
-    // ✅ Guardar gastos en Firebase
+    function addExpenseRow() {
+      const container = document.getElementById('expense-fields');
+      const index = container.children.length;
+      const row = document.createElement('div');
+      row.className = 'gasto-linea';
+      row.innerHTML = `
+        <input id="desc${index}" placeholder="Descripción #${index + 1}" type="text">
+        <input id="cost${index}" placeholder="Costo #${index + 1}" type="number" min="0" step="0.01">
+      `;
+      container.appendChild(row);
+    }
+
     function saveExpenses() {
       const gastos = [];
-      for (let i = 0; i < 15; i++) {
-        const descripcion = document.getElementById('desc' + i).value;
-        const costo = parseFloat(document.getElementById('cost' + i).value) || 0;
+      const fields = document.querySelectorAll('.gasto-linea');
+      fields.forEach((row, i) => {
+        const descripcion = row.querySelector('input[type="text"]').value;
+        const costo = parseFloat(row.querySelector('input[type="number"]').value) || 0;
         gastos.push({ descripcion, costo });
-      }
+      });
       firebase.database().ref('gastos').set(gastos).then(() => {
         alert('Gastos guardados correctamente.');
       });
     }
 
-    // ✅ Calcular ganancias y mostrar desglose
     function calculateProfit() {
+      const fields = document.querySelectorAll('.gasto-linea');
       let totalExpenses = 0;
-      for (let i = 0; i < 15; i++) {
-        const val = parseFloat(document.getElementById('cost' + i).value);
+      fields.forEach(row => {
+        const val = parseFloat(row.querySelector('input[type="number"]').value);
         if (!isNaN(val)) totalExpenses += val;
-      }
+      });
 
       const inicio = document.getElementById('fechaInicioGasto').value;
       const fin = document.getElementById('fechaFinGasto').value;
@@ -195,7 +192,6 @@
           'Quesadilla de seso'
         ];
 
-        // ✅ Recorrer todos los tickets dentro del rango de fechas
         snapshot.forEach(ticket => {
           const data = ticket.val();
           if (data.fecha >= inicio && data.fecha <= fin) {
@@ -218,21 +214,18 @@
           }
         });
 
-        // ✅ HTML para productos clave
         let resumenHTML = '<h4>Desglose de Ventas (productos clave):</h4><ul>';
         for (let producto in resumen) {
           resumenHTML += `<li>${producto} x ${resumen[producto].cantidad} = $${resumen[producto].total.toFixed(2)}</li>`;
         }
         resumenHTML += '</ul>';
 
-        // ✅ HTML para productos no clave
         let noClaveHTML = '<h4>Productos NO considerados como Ganancia (cochinita, seso):</h4><ul>';
         for (let producto in resumenNoClave) {
           noClaveHTML += `<li>${producto} x ${resumenNoClave[producto].cantidad} = $${resumenNoClave[producto].total.toFixed(2)}</li>`;
         }
         noClaveHTML += '</ul>';
 
-        // ✅ Totales y ganancia neta
         const ganancia = totalVentas - totalExpenses;
         const colorGanancia = ganancia >= 0 ? 'green' : 'red';
         const estiloGanancia = `font-weight:bold; font-size:1.2em; color:${colorGanancia}`;
@@ -249,7 +242,7 @@
         `;
       });
     }
-    // ✅ Mostrar receta proporcional según kg de carne ingresados
+
     function showRecipeCalculation(kilos = 2.5) {
       kilos = parseFloat(kilos);
       const factor = kilos / 2.5;
@@ -274,7 +267,6 @@
         `</ul>`;
     }
 
-    // ✅ Ejecutar carga de gastos al iniciar la página
     window.onload = loadExpenses;
   </script>
 </body>
